--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 <h1><a href="index.html">WEB</a></h1>
 <ol>
     <li> <a href="1.html">HTML</a></li>
-    <li> <a href="2.html">css</a></li>
+    <li> <a href="2.html">CSS</a></li>
     <li> <a href="3.html">javascript</a></li>
 </ol>
 <h2>WEB</h2>
 <p>
 The World Wide Web (WWW), commonly known as the Web, is an information system enabling documents and other web resources to be accessed over the Internet.
+</p>
+<p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/EtwtZbmrzB4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </p>
