--- a/1.html
+++ b/1.html
@@ -18,6 +18,7 @@
 <p style="margin-top:10px">
 The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.
 </p>
+<!--Start of DISQUS.to Script-->
 <div id="disqus_thread"></div>
 <script>
    /**
@@ -37,3 +38,17 @@ The HyperText Markup Language or HTML is the standard markup language for docume
     })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<!--End of DISQUS.to Script-->
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/641014fd31ebfa0fe7f26c7d/1grfd402t';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
