--- a/3.html
+++ b/3.html
@@ -1,5 +1,14 @@
 <!doctype html>
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1BEZHLFB7W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1BEZHLFB7W');
+</script>
     <title>WEB1 - Javascript</title>
     <meta charset="utf-8">
 </head>
